--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Torben Ledermann
 -->
 <head>
-	<title>An example Website</title>
+	<title>A great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,12 +17,12 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some more content
 			More Content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Test 2014</p>
 	</footer>
 </body>
 </html>
