Adding more text

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Torben Ledermann
 -->
 <head>
-	<title>An example Website</title>
+	<title>A verry nice Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,10 +19,11 @@
 		<p>
 			Just some content
 			More Content
+			Yeah much more I guess
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Jason 2014</p>
 	</footer>
 </body>
 </html>
