--- a/simple.html
+++ b/simple.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright Torben Ledermann
-	Adding changes
-	Nope
+	Several Chnages
+	And here
+	there also
 -->
 <head>
 	<title>A verry nice Website</title>
@@ -10,7 +11,6 @@
 	<style>
 		body {
 			padding-top: 50px;
-			padding-bottom: 30px;
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
