--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 	Copyright Torben Ledermann
 	Adding changes
+	Nope
 -->
 <head>
 	<title>A verry nice Website</title>
@@ -9,7 +10,7 @@
 	<style>
 		body {
 			padding-top: 50px;
-			padding-bottom: 20px;
+			padding-bottom: 30px;
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -20,6 +21,7 @@
 		<p>
 			More Content
 			Yeah much more I guess
+			Nope
 		</p>
 	</main>
 	<footer class="container">
