--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Several Chnages
 -->
 <head>
-	<title>Simple Updated Title</title>
+	<title>Simple Updated Title for Tagging</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
